test/invalidImports/b.ts
import {xxx} from "a";
import {zzz} from 'c';

export const Y = 100;
